[gd_scene load_steps=8 format=2]

[ext_resource path="res://Enemy/Sprites/Slime.png" type="Texture" id=1]
[ext_resource path="res://Enemy/SlimeBoss.gd" type="Script" id=2]
[ext_resource path="res://Boxes/HitBox.tscn" type="PackedScene" id=3]
[ext_resource path="res://Boxes/HurtBox.tscn" type="PackedScene" id=4]

[sub_resource type="CapsuleShape2D" id=1]
radius = 28.0
height = 84.0

[sub_resource type="CapsuleShape2D" id=2]
radius = 38.0
height = 70.0

[sub_resource type="CapsuleShape2D" id=3]
radius = 24.0
height = 42.0

[node name="SlimeBoss" type="KinematicBody2D"]
position = Vector2( 0, -36 )
script = ExtResource( 2 )

[node name="SlimeSprite" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0.784314 )
position = Vector2( -1, 4 )
texture = ExtResource( 1 )

[node name="HitBox" parent="." instance=ExtResource( 3 )]
position = Vector2( 0, 36 )
rotation = 1.5708
collision_layer = 0

[node name="CollisionShape2D" parent="HitBox" index="0"]
shape = SubResource( 1 )

[node name="HurtBox" parent="." instance=ExtResource( 4 )]
collision_layer = 4
collision_mask = 0

[node name="CollisionShape2D" parent="HurtBox" index="0"]
position = Vector2( 0, 31 )
rotation = 1.5708
shape = SubResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 36 )
rotation = 1.5708
shape = SubResource( 3 )
disabled = true

[node name="JumpTimer" type="Timer" parent="."]
wait_time = 10.0

[node name="SlimeBallTimer" type="Timer" parent="."]

[connection signal="timeout" from="JumpTimer" to="." method="_on_JumpTimer_timeout"]
[connection signal="timeout" from="SlimeBallTimer" to="." method="_on_SlimeBallTimer_timeout"]

[editable path="HitBox"]
[editable path="HurtBox"]
